更新了音乐馆页面，增加了APlayer播放器支持

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,5 +48,6 @@ server.servlet.session.timeout=3600
 # 开启热部署
 spring.devtools.restart.enabled=false
 
+# 静态资源配置
 spring.mvc.static-path-pattern=/static/**
 spring.resources.static-locations=classpath:/static/
