--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,3 +51,13 @@ spring.devtools.restart.enabled=false
 # æ≤Ã¨◊ ‘¥≈‰÷√
 spring.mvc.static-path-pattern=/static/**
 spring.resources.static-locations=classpath:/static/
+
+# redis≈‰÷√
+spring.redis.host= 127.0.0.1
+spring.redis.port= 6379
+spring.redis.password= root
+spring.redis.pool.max-active= 100
+spring.redis.pool.max-idle= 10
+spring.redis.pool.max-wait= 100000
+spring.redis.timeout= 0
+
