修复了文章目录只能从一级标题开始的BUG，文章切换显示的BUG

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,6 +34,11 @@ spring.datasource.druid.max-pool-prepared-statement-per-connection-size=-1
 # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
 spring.datasource.druid.filters=stat,wall,log4j
 
+
+# 查询时，关闭关联对象即时加载以提高性能
+mybatis.configuration.lazy-loading-enabled=true
+# 设置关联对象加载的形态，此处为按需加载字段(加载字段由SQL指定)，不会加载关联表的所有字段，以提高性能
+mybatis.configuration.aggressive-lazy-loading=false
 # 开启驼峰命名转换
 mybatis.configuration.map-underscore-to-camel-case=true
 # 获取自增主键值
