--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # 线下环境
 spring.datasource.druid.url=jdbc:mysql://localhost:3306/myblog?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true
 spring.datasource.druid.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.druid.username=root
-spring.datasource.druid.password=root
+spring.datasource.druid.username=******
+spring.datasource.druid.password=******
 ###############################################################################################################
 
 #服务器配置
@@ -56,9 +56,9 @@ spring.mvc.static-path-pattern=/static/**
 spring.resources.static-locations=classpath:/static/
 
 # redis配置
-spring.redis.host= 101.132.74.152
+spring.redis.host= ******
 spring.redis.port= 6379
-spring.redis.password=root
+spring.redis.password=******
 spring.redis.pool.max-active= 100
 spring.redis.pool.max-idle= 10
 spring.redis.pool.max-wait= 100000
