--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # 线下环境
 spring.datasource.druid.url=jdbc:mysql://localhost:3306/myblog?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMultiQueries=true
 spring.datasource.druid.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.druid.username=******
-spring.datasource.druid.password=******
+spring.datasource.druid.username=root
+spring.datasource.druid.password=root
 ###############################################################################################################
 
 #服务器配置
@@ -34,6 +34,7 @@ spring.datasource.druid.max-pool-prepared-statement-per-connection-size=-1
 # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
 spring.datasource.druid.filters=stat,wall,log4j
 
+logging.path=/var/log
 
 # 查询时，关闭关联对象即时加载以提高性能
 mybatis.configuration.lazy-loading-enabled=true
@@ -56,9 +57,9 @@ spring.mvc.static-path-pattern=/static/**
 spring.resources.static-locations=classpath:/static/
 
 # redis配置
-spring.redis.host= ******
+spring.redis.host= 101.132.74.152
 spring.redis.port= 6379
-spring.redis.password=******
+spring.redis.password=root
 spring.redis.pool.max-active= 100
 spring.redis.pool.max-idle= 10
 spring.redis.pool.max-wait= 100000
